# -

./: .account_cache.json.enc  .env.example  .gitignore  BATCH_ADD_ACCOUNTS_FEATURE.md  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENCRYPTION_USER_GUIDE.md  ERROR_LOG_IMPROVEMENT_SUMMARY.md  GPU加速整合方案总结.md  GUI_COLUMN_ORDER_FIX_SUMMARY.md  MODEL_SINGLETON_OPTIMIZATION_FINAL_SUMMARY.md  PAUSE_FUNCTION_FIX_SUMMARY.md  PyTorch模型迁移总结.md  QUICK_START_PAGE_CLASSIFIER.md  README.md  TASK_11.3_COMPLETION_SUMMARY.md  TASK_1_COMPLETION_SUMMARY.md  TASK_3_COMPLETION_SUMMARY.md  TASK_3_HISTORY_OPTIMIZATION_SUMMARY.md  TASK_4_COMPLETION_SUMMARY.md  TASK_5_COMPLETION_SUMMARY.md  TASK_6_COMPLETION_SUMMARY.md  TASK_7_COMPLETION_SUMMARY.md  TASK_8_COMPLETION_SUMMARY.md  TEST_TEMPLATE_README.md  TRANSFER_INTEGRATED_DETECTOR_SUMMARY.md  auto_backup_templates.bat  backup_templates.bat  benchmark_model_manager.py  build_v2.0.6.bat  check_1875263.py  check_account_log.py  check_all_database_data.py  check_all_latest_records.py  check_balance_data.py  check_balance_zero.py  check_button_learner.py  check_checkin_amount_accuracy.py  check_class_distribution.py  check_completed_folders.py  check_completed_training_data.py  (+102 more)
benchmark_results/: benchmark_with_manager_20260129_164220.json
config/: database_setup.sql  page_state_mapping.json  yolo_model_registry.json
data/: accounts.txt.enc  账号详情.xlsx
data_cleanup/: cleanup_transaction_history_data.py  delete_augmented_from_completed.py  delete_test_users.py  filter_original_from_restored.py
dev_tools/: CACHE_SAVE_FIX_SUMMARY.md  README.md  (+51 more)
(+3291 files in other folders)
